--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.container {
+  padding: 15px;
+  font-size: 14px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.post {
+  width: 250px;
+  padding: 15px;
+  margin-bottom: 10px;
+  border: 1px solid rgb(185, 182, 182);
+  border-radius: 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.post__date {
+  color: grey;
+  font-size: 12px;
+  margin-bottom: 10px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.addbutton, .addform__submit, .editform__submit {
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: rgb(61, 171, 61);
   color: white;
+  border: 0;
+  border-radius: 5px;
 }
-
-.App-link {
-  color: #61dafb;
+.addform__input, .editform__input {
+  padding: 10px;
+  margin-right: 10px;
+  border: 1px solid rgb(185, 182, 182);
+  border-radius: 5px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.post__edit_button {
+  padding: 10px;
+  margin-top: 10px;
+  margin-right: 5px;
+  background-color: rgb(96, 157, 236);
+  color: white;
+  border: 0;
+  border-radius: 5px;
+}
+.post__delete_button {
+  padding: 10px;
+  margin-top: 10px;
+  background-color: red;
+  color: white;
+  border: 0;
+  border-radius: 5px;
 }
